# reviewer

./: .env.example  .gitattributes  .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/cli/: main.py
backend/app/core/: settings.py
backend/app/models/: analysis.py  auth.py  github_bot.py  review_domain.py  stats.py
backend/app/renderers/: cli_renderer.py  cli_ui.py  github_renderer.py
backend/app/routes/: analyze.py  auth.py  github_bot.py  publish.py  stats.py
backend/app/services/: analysis_cache_store.py  analysis_service.py  auth_session_service.py  fallback_policy.py  file_classifier.py  github_app_auth.py  github_bot_service.py  github_bot_settings_store.py  github_client.py  github_webhook_delivery_store.py  github_webhook_service.py  inflight_task_registry.py  json_file_store.py  pr_url_parser.py  recommendation_engine.py  request_limiter.py  result_builder.py  review_publish_service.py  scoring_engine.py  signal_detector.py  stats_database.py  stats_service.py  tree_sitter_service.py  web_auth_session_service.py
backend/tests/: conftest.py
backend/tests/routes/: test_analyze.py  test_auth.py  test_github_bot.py  test_stats.py
backend/tests/services/: test_analysis_service.py  test_auth_session_service.py  test_cli_main.py  test_cli_renderer.py  test_fallback_policy.py  test_file_classifier.py  test_github_app_auth.py  test_github_bot_service.py  test_github_bot_settings_store.py  test_github_client.py  test_github_renderer.py  test_github_webhook_service.py  test_recommendation_engine.py  test_request_limiter.py  test_result_builder.py  test_review_publish_service.py  test_scoring_engine.py  test_signal_detector.py  test_stats_service.py  test_tree_sitter_service.py  test_web_auth_session_service.py
docs/: publish_reviewer_cli.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: app.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: app_error_boundary.tsx  background_boxes.tsx  brand_logo.tsx  first_visit_intro.tsx  navbar.tsx  pr_input_bar.tsx  site_footer.tsx
(+16 files in other folders)
