[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewer-cli"
version = "0.1.0"
description = "Deterministic pull request review for public GitHub pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "pydantic==2.11.3",
  "tree-sitter==0.24.0",
  "tree-sitter-javascript==0.23.1",
  "tree-sitter-python==0.23.6",
  "psycopg[binary]==3.2.9",
]

[project.scripts]
reviewer = "app.cli.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
